refactor: migrate custom menu generators (part 3)